fix: harden SMS backend skeleton
Co-Authored-By: Claude Sonnet 4.6 noreply@anthropic.com (noreply@anthropic.com)
Signed-off-by: Ben Heerema <ben.heerema@mail.utoronto.ca>
Signed-off-by: Michael Yingbull <michael@maplecreekmedical.ca>