@@ -3,6 +3,8 @@ package io.github.carlos_emr.carlos.sms.dto;
 import io.github.carlos_emr.carlos.sms.SmsProviderType;
 
 import java.time.Instant;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 public record SmsInboundWebhookDto(
@@ -15,6 +17,8 @@ public record SmsInboundWebhookDto(
         Map<String, String> providerMetadata
 ) {
     public SmsInboundWebhookDto {
-        providerMetadata = providerMetadata == null ? Map.of() : Map.copyOf(providerMetadata);
+        providerMetadata = providerMetadata == null
+                ? Map.of()
+                : Collections.unmodifiableMap(new HashMap<>(providerMetadata));
     }
 }
